# rust-template

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: publish.yml  release.yml  rust.yml
src/: main.rs
